# muffon-encryptor

./: CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  TODO.md
.github/workflows/: release.yml
src/: main.rs
src/modules/: mod.rs
src/modules/bcrypt_mods/: encrypt_master_password.rs  mod.rs  verify_master_password.rs
src/modules/file_path_mods/: get_base_file_path.rs  get_master_password_file_path.rs  get_passwords_file_path.rs  mod.rs
