[package]
name = "muffon-encryptor"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
bcrypt = "0.14.0"
env_logger = "0.10.0"
log = "0.4.20"
directories = "5.0.1"
rpassword = "7.2.0"
